# hasten

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: ci.yml
docs/: idl.md  semantic_validation.md
examples/echo/: CMakeLists.txt  client_main.cpp  conanfile.txt  echo.hidl  server_main.cpp
src/: main.cpp  options.cpp  options.hpp
src/cli/: CMakeLists.txt  hasten.cpp  options.cpp
src/cli/include/cli/: hasten.hpp  options.hpp
src/codegen/: CMakeLists.txt  emitter.cpp  emitter.hpp  file_writer.cpp  file_writer.hpp  generator.cpp  ir.hpp  ir_builder.cpp  ir_builder.hpp  ostream_joiner.hpp
src/codegen/include/codegen/: generator.hpp  options.hpp
src/frontend/: CMakeLists.txt  diagnostic.cpp  frontend.cpp
src/frontend/include/frontend/: diagnostic.hpp  frontend.hpp  program.hpp  semantics.hpp  source_file.hpp
src/frontend/include/frontend/semantic/: validator.hpp
src/frontend/include/frontend/semantics/: check_duplicate_ids.hpp  validator.hpp
src/frontend/semantic/: declaration_index_pass.cpp  declaration_index_pass.hpp  enum_validation_pass.cpp  enum_validation_pass.hpp  interface_validation_pass.cpp  interface_validation_pass.hpp  module_index_pass.cpp  module_index_pass.hpp  semantic_context.cpp  semantic_context.hpp  semantic_pass.hpp  struct_validation_pass.cpp  struct_validation_pass.hpp  type_validator.cpp  type_validator.hpp  utility.hpp  validator.cpp
src/frontend/semantics/: validator.cpp  validator_impl.cpp  validator_impl.hpp
src/idl/: CMakeLists.txt  json_dump.cpp  parser.cpp  rules.cpp
src/idl/include/idl/: ast.hpp  config.hpp  error_handler.hpp  json_dump.hpp  parser.hpp  rules.hpp  rules_definition.hpp  visit.hpp
src/runtime/: CMakeLists.txt  conanfile.py  context.cpp  executor.cpp  frame.cpp  rpc.cpp  uds.cpp
src/runtime/include/hasten/runtime/: channel.hpp  context.hpp  encoding.hpp  error.hpp  executor.hpp  frame.hpp  result.hpp  rpc.hpp  uds.hpp
src/runtime/include/hasten/runtime/serialization/: hb1.hpp  payload.hpp
src/runtime/serialization/: hb1.cpp
test_package/: conanfile.py
tests/: CMakeLists.txt  test_cli.cpp  test_cli_options.cpp  test_codegen.cpp  test_executor.cpp  test_frontend.cpp  test_frontend_detail.cpp  test_idl_rules.cpp  test_parser.cpp  test_runtime.cpp  test_runtime_serialization.cpp  test_semantic.cpp
